Bug 305 - yesexpr/noexpr doesn't include Yy/Nn when possible
Summary: yesexpr/noexpr doesn't include Yy/Nn when possible
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: localedata (show other bugs)
Version: 2.3.3
: P2 normal
Target Milestone: ---
Assignee: Petter Reinholdtsen
URL:
Keywords:
Depends on: 71
Blocks:
  Show dependency treegraph
 
Reported: 2004-08-06 19:58 UTC by Pablo Saratxaga
Modified: 2019-04-10 10:52 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo Saratxaga 2004-08-06 19:58:58 UTC
(See also Bug #71)

Those locales only have arabic letters in the yesexpr/noexpr entries.

I strongly think that Yy and Nn should be included in all locales (unless they
conflict with the native letters, which happens for 2 or 3 languages at most).

Here is why:

[ru@test ru]$ touch foo
[ru@test ru]$ LANGUAGE=ar LC_ALL=ar_SA rm -i foo
rm: remove regular empty file `foo'? y
[ru@test ru]$ ls foo
foo

AS you can see, replying "y" is ignored in Arabic locale; but the question
messages is not translated, the question is done in English (and there are
plenty of such cases). People tend to reply in English (eg: with the "Y" (or
"N") key) when the question is not localized.
Maybe it is not stricto sensu a bug, but it is a very big annoyance, that could
be easily avoided.
Comment 1 Munzir Taha 2004-08-07 00:31:26 UTC
yes, it's a very big annoyance that spread across all distros. Mandrake has 
already solved it in their glibc version but it should be fixed here once and 
for ever. 
Comment 2 Petter Reinholdtsen 2004-08-08 18:45:06 UTC
I agree that all locales where the native yes/no expression
don't start with 'y' and 'n' should list 'Yy' in yesexpr and 'Nn' in
noexpr.  But I am not sure if the glibc developers agree with me
on this, and even if they do, it will take a while to make patches
to fix this in all the locales missing it.

Someone knowledgable about the locales need to provide patches.
If you understand arabic, please provide a patch for the arabic
locales.  Would it be possible to make most arabic locales 'copy'
the yes/no regex from one arabic locale, to avoid duplication?
At the moment not all the arabic locales use the same regex.
Should they?
Comment 3 Munzir Taha 2004-08-10 20:58:51 UTC
First, as a native Arabic speaker I confirm and stress the fact that all 
Arabic locales should use the same regex. 
 
Second, it's highly recommended if possible that all arabic locales 'copy'the 
yes/no regex from one arabic locale, sepcifically, ar_EG as mentioned by Pablo 
is correct. 
 
Comment 4 Petter Reinholdtsen 2004-09-02 23:18:33 UTC
At the moment, this affects locales af_ZA, ar_AE, ar_BH, ar_DZ, ar_EG,
ar_IN, ar_IQ, ar_JO, ar_KW, ar_LB, ar_LY, ar_MA, ar_OM, ar_QA, ar_SA,
ar_SD, ar_SY, ar_TN, ar_YE, az_AZ, bn_IN, kw_GB, ml_IN, oc_FR, ta_IN,
te_IN and tr_TR.
Comment 5 Sourceware Commits 2004-12-10 10:43:41 UTC
Subject: Bug 305

CVSROOT:	/cvs/glibc
Module name:	libc
Changes by:	drepper@sources.redhat.com	2004-12-10 10:43:31

Modified files:
	nis/nss_nisplus: nisplus-netgrp.c 

Log message:
	(_nss_nisplus_getnetgrent_r): Add check if the value is not an empty
	string.  [BZ #305]

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/nis/nss_nisplus/nisplus-netgrp.c.diff?cvsroot=glibc&r1=1.13&r2=1.14

Comment 6 Ulrich Drepper 2005-10-15 01:27:19 UTC
I fixed the locales I saw.  Open new bugs for additional locales which need to
change.